# ChangeLog for dev-libs/nss
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/nss/ChangeLog,v 1.123 2008/06/05 13:08:22 armin76 Exp $

*nss-3.12_rc4 (05 Jun 2008)

  05 Jun 2008; Raúl Porcel <armin76@gentoo.org> +nss-3.12_rc4.ebuild:
  Version bump

*nss-3.12_rc3 (11 May 2008)

  11 May 2008; Raúl Porcel <armin76@gentoo.org> +nss-3.12_rc3.ebuild:
  Version bump

  11 Apr 2008; Raúl Porcel <armin76@gentoo.org> nss-3.11.7.ebuild,
  nss-3.11.9.ebuild, nss-3.12_beta3.ebuild, nss-3.12_rc2.ebuild:
  Use the right compiler call, bug #216877

*nss-3.12_rc2 (09 Apr 2008)

  09 Apr 2008; Raúl Porcel <armin76@gentoo.org> +nss-3.12_rc2.ebuild:
  Version bump

  02 Apr 2008; Raúl Porcel <armin76@gentoo.org> -nss-3.12_beta2.ebuild,
  nss-3.12_beta3.ebuild:
  Restore keywords, remove old

  26 Mar 2008; Markus Meier <maekke@gentoo.org> nss-3.11.9.ebuild:
  amd64 stable, bug #213601

  23 Mar 2008; nixnut <nixnut@gentoo.org> nss-3.11.9.ebuild:
  Stable on ppc wrt bug 213601

  22 Mar 2008; Brent Baude <ranger@gentoo.org> nss-3.11.9.ebuild:
  Marking nss-3.11.9 ppc64 for bug 213601

  17 Mar 2008; Jeroen Roovers <jer@gentoo.org> nss-3.11.9.ebuild:
  Stable for HPPA (bug #213601).

*nss-3.12_beta3 (17 Mar 2008)

  17 Mar 2008; Raúl Porcel <armin76@gentoo.org> nss-3.11.7.ebuild,
  nss-3.11.9.ebuild, nss-3.12_beta2.ebuild, +nss-3.12_beta3.ebuild:
  Version bump, fix LICENSE, thanks to zlin

  16 Mar 2008; Raúl Porcel <armin76@gentoo.org> nss-3.11.9.ebuild:
  alpha/ia64/sparc/x86 stable

*nss-3.12_beta2 (25 Feb 2008)

  25 Feb 2008; Raúl Porcel <armin76@gentoo.org>
  +files/nss-3.12-config-1.patch, -nss-3.12_beta1-r1.ebuild,
  +nss-3.12_beta2.ebuild:
  Version bump

*nss-3.11.9 (11 Feb 2008)

  11 Feb 2008; Raúl Porcel <armin76@gentoo.org> +nss-3.11.9.ebuild,
  nss-3.12_beta1-r1.ebuild, -nss-3.12_alpha2_p2-r1.ebuild:
  Version bump

*nss-3.12_beta1-r1 (19 Jan 2008)
