@@ -1,16 +1,16 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/nss/nss-3.12_rc3.ebuild,v 1.1 2008/05/11 14:30:23 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/nss/nss-3.12.ebuild,v 1.1 2008/06/18 14:57:17 armin76 Exp $
 
 EAPI="prefix"
 
 inherit eutils flag-o-matic multilib toolchain-funcs
 
-NSPR_VER="4.7.1_beta3"
+NSPR_VER="4.7.1"
 RTM_NAME="NSS_${PV//./_}_RTM"
 DESCRIPTION="Mozilla's Network Security Services library that implements PKI support"
 HOMEPAGE="http://www.mozilla.org/projects/security/pki/nss/"
-SRC_URI="mirror://gentoo/${P}.tar.bz2"
+SRC_URI="ftp://ftp.mozilla.org/pub/mozilla.org/security/nss/releases/${RTM_NAME}/src/${P}.tar.gz"
 
 LICENSE="|| ( MPL-1.1 GPL-2 LGPL-2.1 )"
 SLOT="0"
@@ -18,9 +18,7 @@ KEYWORDS="~amd64-linux ~x86-linux"
 IUSE="utils"
 
 DEPEND=">=dev-libs/nspr-${NSPR_VER}
-	>=dev-db/sqlite-3.5"
-
-S="${WORKDIR}"
+	>=dev-db/sqlite-3.5.6"
 
 src_unpack() {
 	unpack ${A}
